--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,12 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="background: #EEEEEE;">
 
 <%= yield %>
 
+</br>
+</br>
+<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
